--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-
-
 .hidden {
     display: none;
 }
@@ -30,7 +28,7 @@ form {
 
 #main-game {
     height: 50%;
-    /* border: 1px solid green; */
+    border: 1px solid green;
 }
 
 .row {
@@ -104,4 +102,11 @@ img {
 .test {
     height: 100vh;
     background-color: lightblue;
+}
+
+.paired {
+    padding: 0px 25px 0px 25px;
+    min-height: 200px;
+
+    /* border: 1px solid black; */
 }
