--- a/css/styles.css
+++ b/css/styles.css
@@ -52,11 +52,6 @@ img {
     width: 33px;
 }
 
-.matched {
-    display: inline-block;
-    border: 1px solid orange;
-}
-
 .pairs {
     background-color: grey;
 }
@@ -82,6 +77,18 @@ img {
     margin: 0 auto;
 }
 
+/* Paired Sets */
+
+.matched {
+    display: inline-block;
+    padding: 2px 3px 2px 3px;
+    margin: 2px;
+}
+
+.month-title {
+    margin-bottom: 0;
+}
+
 /* Instruction Notification */
 .rule-notice {
     background-color: lightpink;
@@ -97,3 +104,4 @@ img {
 #winner {
     height: 100vh;
 }
+
