--- a/css/styles.css
+++ b/css/styles.css
@@ -234,3 +234,14 @@ img {
     height: 100vh;
 }
 
+/* Winner Display (End Game) */
+
+.point-display {
+  width: 33%;
+  margin-top: 25px;
+  padding: 20px;
+  text-align: center;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+
+}
