--- a/css/styles.css
+++ b/css/styles.css
@@ -236,12 +236,22 @@ img {
 
 /* Winner Display (End Game) */
 
-.point-display {
-  width: 33%;
-  margin-top: 25px;
-  padding: 20px;
+#game-winner {
+  margin-top: 35px;
+}
+
+#point-display, #leaderboard {
+  margin: 20px;
+  padding: 10px;
   text-align: center;
   background-color: #FFFFFF;
   border-radius: 10px;
+}
 
+#point-display {
+  height: 33%;
+}
+
+.align-center {
+  text-align: center;
 }
