--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,12 @@ body {
 /* Welcome Page */
 
 #welcome {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://japandeluxetours.com/uploads/2017/06/20170609135305_593b0ab176b4c.jpg');
-    height: 100vh;
-    background-size: cover;
-    margin: 0;
-    padding: 0;
-    color: white;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://japandeluxetours.com/uploads/2017/06/20170609135305_593b0ab176b4c.jpg');
+  height: 100vh;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  color: white;
 }
 
 .animated {
@@ -139,8 +139,11 @@ form {
 }
 
 #main-game {
-    height: 50%;
-    border: 1px solid green;
+  height: 50%;
+}
+
+#main-board {
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../card-imgs/9335444b0b481dfa24364f5f97a53793.jpg');
 }
 
 .row {
@@ -161,10 +164,6 @@ img {
     width: 33px;
 }
 
-.pairs {
-    background-color: grey;
-}
-
 .test {
     height: 100vh;
     background-color: lightblue;
@@ -183,32 +182,36 @@ img {
 /* Board Row */
 
 #board {
-  background-color: #D2B48C;
+  background: rgba(210, 180, 140, .9);
   background-size: cover;
   border: 3px solid #8b5d2e;
   padding: 10px 0px 10px 0px;
   min-height: 200px;
 }
 
-/* Paired Sets */
+/* Paired Row */
+
+.pairs {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../card-imgs/tatami.jpg');
+  color: #e5e4e2;
+}
 
 #computer-pairs {
-    padding-right: 10px;
+  padding-right: 10px;
 }
 
 #user-pairs {
-    padding-left: 10px;
+  padding-left: 10px;
 }
 
-
 .matched {
-    display: inline-block;
-    padding: 2px 3px 2px 3px;
-    margin: 2px;
+  display: inline-block;
+  padding: 2px 3px 2px 3px;
+  margin: 2px;
 }
 
 .month-title {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 /* Instruction Notification */
@@ -234,7 +237,7 @@ img {
   border: 3px solid lightgreen;
 }
 
-.opponent-notice {
+#current-player-notice {
   background-color: lightyellow;
   border: 2px solid grey;
   padding: 5px;
